Fix: Dark mode accessibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,7 @@
     --northwestern: 274 66% 32%;
     --northwestern-foreground: 273 66% 41%;
 
-    --border: 0 0% 14.9%;
+    --border: 0 0% 50.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
   }
